--- a/Estilos.css
+++ b/Estilos.css
@@ -110,6 +110,34 @@
   font-style: italic;
 }
 
+.fondo {
+  background: linear-gradient(270deg, #e04d30, #37e940, #6243ec, #df51b4, #ae44ec);
+  
+  -webkit-animation: fondo 30s ease infinite;
+  -moz-animation: fondo 30s ease infinite;
+  -o-animation: fondo 30s ease infinite;
+  animation: fondo 30s ease infinite;
+}
+@-webkit-keyframes fondo {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@-moz-keyframes fondo {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@-o-keyframes fondo {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@keyframes fondo {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
 
 /* BARRA SEPARADORA */
 
