--- a/output.css
+++ b/output.css
@@ -1289,12 +1289,12 @@ video {
   position: relative;
   overflow: hidden;
   z-index: 1;
-  color: #090909;
+  color: #ffffff;
   padding: 0.7em 1.7em;
   cursor: pointer;
   font-size: 18px;
   
-  background: #e8e8e8;
+  background: #e8e8e800;
   border: 1px solid #e93131;
   
 }
@@ -1312,7 +1312,7 @@ video {
   top: 100%;
   width: 140%;
   height: 180%;
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: rgba(255, 255, 255, 0.05);
   border-radius: 50%;
   display: block;
   transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
@@ -1350,6 +1350,7 @@ video {
   background-color: #f5492a;
   transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
+
 
 
 
